--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,10 @@
+.parallex {
+  height: 500px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -132,7 +139,6 @@ html {
   font-size: 62.5%;
   overflow: scroll;
   justify-content: center;
-  background-color: red;
 }
 h1 {
   font-size: 3.2rem;
@@ -147,8 +153,26 @@ p {
 .bg {
   margin-left: 15%;
 }
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Roboto Italic'), local('Roboto-Italic'), url(https://fonts.gstatic.com/s/roboto/v20/KFOkCnqEu92Fr1Mu51xIIzc.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxP.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Roboto Bold'), local('Roboto-Bold'), url(https://fonts.gstatic.com/s/roboto/v20/KFOlCnqEu92Fr1MmWUlfBBc9.ttf) format('truetype');
+}
 /*Disabled desktop menu*/
-/*Enabled in media query*/
+/*Re-enabled in media query*/
 .main-nav {
   display: none;
 }
@@ -161,8 +185,235 @@ p {
 .main-name-2 {
   display: none;
 }
+/*Side bar*/
+.sidebar {
+  margin-top: -2rem;
+  width: 6rem;
+  height: 100%;
+  background-color: black;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 2;
+}
+/*Hamburger menu*/
+.menu-burger {
+  margin-top: 3rem;
+  cursor: pointer;
+  position: fixed;
+}
+.bar {
+  height: 0.2rem;
+  width: 2.5rem;
+  background-color: whitesmoke;
+  margin-bottom: 0.6rem;
+  margin-right: 5px;
+}
+/*Social Icons*/
+.social-icons {
+  list-style: none;
+  padding: 0;
+  height: 25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 30rem;
+}
+.social-icons .social-link {
+  font-size: 2rem;
+  color: #777;
+  transition: color 0.3s;
+}
+.social-icons .social-link:hover {
+  color: coral;
+}
+.logo-2 {
+  margin-top: -20rem;
+  display: none;
+}
+.navigation-search {
+  position: relative;
+}
+/*Navigation search*/
+.navigation {
+  margin-bottom: 5rem;
+  margin-left: 1rem;
+  width: 25rem;
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: center;
+  margin-top: -20rem;
+  background-color: rgba(0, 0, 0, 0.3);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: black;
+  outline: none;
+  border: 4px solid black;
+  border-radius: 10rem;
+  transition: background-color 0.3s;
+}
+.navigation:focus {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.navigation-btn {
+  border: none;
+  background-color: transparent;
+  color: whitesmoke;
+  font-size: 1.7rem;
+  position: absolute;
+  top: -19rem;
+  right: 1rem;
+  cursor: pointer;
+  outline: none;
+}
+/* Menu naviation*/
+.main-nav-menu {
+  position: fixed;
+  left: -45rem;
+  margin-top: -1.9rem;
+  width: 45rem;
+  height: 100%;
+  background-color: coral;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  transition: left 0.8s cubic-bezier(1, 0, 0, 1);
+  z-index: 1;
+}
+.heading {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  text-decoration: underline;
+  margin-top: -70%;
+  font-size: 3.5rem;
+}
+ul {
+  margin-top: -40rem;
+}
+li {
+  margin-bottom: 14%;
+}
+.nav-list-menu {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-shadow: 2px 2px 4px #4b4b4b;
+}
+.nav-link-menu {
+  color: black;
+  font-size: 4rem;
+  font-weight: 400;
+  text-decoration: none;
+  letter-spacing: 0.3rem;
+  transition: color 0.5s;
+  font-family: Impact, Charcoal, sans-serif;
+}
+.nav-link-menu:hover {
+  color: white;
+}
+.bar-1,
+.bar-3 {
+  transition: all 0.4s;
+}
+.checkbox:checked ~ .main-nav-menu {
+  left: 3.5rem;
+}
+.checkbox:checked ~ .sidebar .bar-1 {
+  transform: rotate(-405deg) translate(-5px, 6px);
+}
+.checkbox:checked ~ .sidebar .bar-2 {
+  opacity: 0;
+}
+.checkbox:checked ~ .sidebar .bar-3 {
+  transform: rotate(405deg) translate(-5px, -6px);
+}
+/*Sidebar Menu naviation ENDED*/
+/*Logo*/
+.logo {
+  display: none;
+}
+/*Lady image on header*/
+.main-name {
+  padding: 10vh 0;
+  background: gray url("../img/lady3.jpg");
+  background-size: cover;
+  background-blend-mode: multiply;
+  color: white;
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  text-align: center;
+  margin-bottom: 1rem;
+  margin-top: -10rem;
+  margin-left: -5rem;
+}
+.main-name h1 {
+  font-size: 13rem;
+}
+/*ABOUT Lady image on header*/
+.main-name-about {
+  padding: 10vh 0;
+  background: gray url("../img/assorted.jpg");
+  background-size: cover;
+  background-blend-mode: multiply;
+  color: white;
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  text-align: center;
+  margin-bottom: 1rem;
+  margin-top: -10rem;
+  margin-left: -5rem;
+}
+.main-name-about h1 {
+  font-size: 13rem;
+  margin-bottom: 5rem;
+}
+/*Line under pasta image*/
+hr {
+  margin: 20rem 1rem 5rem 0;
+}
+/*Main name displayed*/
+.label-2 {
+  margin-top: -20rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: white;
+}
+/*Page name*/
+.trop {
+  color: whitesmoke;
+  padding: -10rem 0 5rem 0;
+  font-size: 15px;
+  text-decoration: underline;
+  margin: 20rem 0 0 3rem;
+}
+.afri {
+  font-size: 5rem;
+  opacity: 0.7;
+  margin: 3rem 0 0 3rem;
+}
+.p1-2 {
+  font-size: 5rem;
+  text-align: center;
+  padding: 8% 15% 12% 15%;
+  font-family: "Segoe UI";
+  color: white;
+  opacity: 100%;
+}
 /*Media query***********************************************************************/
-@media (max-width: 900px) {
+@media (min-width: 1211px) {
   .menu-nav {
     display: none;
   }
@@ -172,6 +423,7 @@ p {
   /*Navigation*/
   .account {
     display: flex;
+    margin-top: -5.5rem;
   }
   .nav-list {
     list-style: none;
@@ -193,7 +445,7 @@ p {
     justify-content: center;
     margin-top: -30px;
     background-color: rgba(0, 0, 0, 0.3);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     color: black;
     outline: none;
     border: 2px solid green;
@@ -323,9 +575,707 @@ p {
   /*Logo*/
   .logo {
     display: flex;
-    background: white;
+    background: #ffffff7e;
     border-radius: 50%;
-    padding: 12px;
+    padding: -1px;
     opacity: 0.7;
+  }
+}
+footer {
+  background: black;
+  align-items: center;
+  width: 100%;
+  margin: 10rem 0 0 -1.5rem;
+  padding: 0 0.77rem;
+}
+.foot-content {
+  display: flex;
+  justify-content: space-around;
+}
+.foot-content a {
+  color: whitesmoke;
+  text-decoration: none;
+}
+.foot-content a:hover {
+  text-decoration: underline;
+}
+.icons {
+  margin: 0 0 5rem 0;
+  margin-top: 5%;
+}
+.icons h3 {
+  font-size: 15px;
+  color: whitesmoke;
+}
+.icons a {
+  color: whitesmoke;
+  font-size: 3rem;
+  text-decoration: none;
+}
+.icons .fa-twitter {
+  color: #1DA1F2;
+}
+.icons .fa-facebook {
+  color: #4267B2;
+}
+.icons .fa-instagram {
+  background: -webkit-linear-gradient(#405DE6, #5851DB, #833AB4, #C13584, #E1306C, #FD1D1D, #F56040, #F77737, #FCAF45, #FFDC80);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.icons .fa-youtube {
+  color: #FF0000;
+}
+.icons p {
+  color: whitesmoke;
+  margin: 0 0 0 -8rem;
+}
+.home-about {
+  align-items: center;
+  background-color: coral;
+  opacity: 90%;
+  padding: 4rem;
+  margin: -1rem 0 0 -2rem;
+}
+.home-about .p1 {
+  font-size: 2.1rem;
+  text-align: center;
+  margin: 2rem 1rem 3rem 1rem;
+  font-family: "Segoe UI";
+  color: black;
+}
+.home-about .p1 span {
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 0.2em;
+  background-position: 0 88%;
+  transition: background-size 0.25s ease-in;
+}
+.home-about .p1 span:hover {
+  background-size: 100% 88%;
+  color: whitesmoke;
+}
+/*Center image/content*/
+.main-content {
+  display: flex;
+  flex-direction: column;
+  /******************************************************************************/
+  /******************************************************************************/
+  /******************************************************************************/
+  /******************************************************************************/
+}
+.main-content .high {
+  display: flex;
+  justify-content: center;
+  margin: 3rem 0 1rem 0;
+  font-size: 3rem;
+  font-weight: bold;
+}
+@media (min-width:1154px) {
+  .main-content .high {
+    margin: 10rem 0 -9rem 10rem;
+  }
+}
+@media (min-width:1154px) {
+  .main-content .high {
+    margin: 3rem 0 5rem 0;
+  }
+}
+.main-content p {
+  text-align: center;
+  margin: 0 1rem 3rem 1rem;
+  font-size: 2rem;
+  font-family: "Segoe UI";
+}
+@media (min-width:1154px) {
+  .main-content p {
+    margin: 15rem 64rem 8rem 64rem;
+  }
+}
+@media (min-width:1154px) {
+  .main-content p {
+    margin: 0 2rem 5rem 2rem;
+  }
+}
+@media (min-width:1154px) {
+  .main-content p {
+    margin: 0 8rem 5rem 8rem;
+  }
+}
+@media (min-width:2560px) {
+  .main-content p {
+    margin: 0;
+    margin: 0 60rem 10rem 60rem;
+  }
+}
+.main-content .img {
+  margin: 0 0 0 1rem;
+  display: flex;
+  justify-content: center;
+  width: 30vh;
+  height: auto;
+  border-radius: 5%;
+  transition: transform 0.2s;
+}
+@media (min-width:1154px) {
+  .main-content .img {
+    margin: 0 0 0 0;
+    width: 100vh;
+    height: auto;
+  }
+}
+.main-content .veggies {
+  height: 30vh;
+}
+@media (min-width:590px) {
+  .main-content .veggies {
+    margin-left: 10rem;
+  }
+}
+@media (min-width:610px) {
+  .main-content .veggies {
+    margin-left: 10rem;
+  }
+}
+@media (min-width:854px) {
+  .main-content .veggies {
+    margin-left: 20rem;
+  }
+}
+@media (min-width:1154px) {
+  .main-content .veggies {
+    margin: 0 0 0 65rem;
+    height: 120vh;
+  }
+}
+@media (min-width:1128px) {
+  .main-content .veggies {
+    margin: 0 0 0 35rem;
+  }
+}
+@media (min-width:1154px) {
+  .main-content .veggies {
+    width: 50vh;
+    height: 55vh;
+  }
+}
+@media (min-width:1682px) {
+  .main-content .veggies {
+    margin: 0;
+    margin-left: 65rem;
+    width: 60vh;
+    height: 65vh;
+  }
+}
+@media (min-width:2560px) {
+  .main-content .veggies {
+    margin: 0;
+    margin-left: 70rem;
+    width: 100vh;
+    height: 105vh;
+  }
+}
+@media (min-width:2482px) {
+  .main-content .veggies {
+    margin: 0;
+    margin-left: 70rem;
+    width: 80vh;
+    height: 90;
+  }
+}
+@media (min-width:590px) {
+  .main-content .exchange {
+    margin-left: 10rem;
+  }
+}
+@media (min-width:610px) {
+  .main-content .exchange {
+    margin-left: 10rem;
+  }
+}
+@media (min-width:854px) {
+  .main-content .exchange {
+    margin-left: 20rem;
+  }
+}
+@media (min-width:1154px) {
+  .main-content .exchange {
+    margin: 0 0 0 65rem;
+  }
+}
+@media (min-width:1128px) {
+  .main-content .exchange {
+    margin: 0 0 0 35rem;
+  }
+}
+@media (min-width:1154px) {
+  .main-content .exchange {
+    width: 50vh;
+    height: auto;
+  }
+}
+@media (min-width:1682px) {
+  .main-content .exchange {
+    margin: 0;
+    margin-left: 65rem;
+    width: 60vh;
+    height: auto;
+  }
+}
+@media (min-width:2560px) {
+  .main-content .exchange {
+    margin: 0;
+    margin-left: 70rem;
+    width: 100vh;
+    height: auto;
+  }
+}
+@media (min-width:2482px) {
+  .main-content .exchange {
+    margin: 0;
+    margin-left: 70rem;
+    width: 80vh;
+    height: auto;
+  }
+}
+@media (min-width:590px) {
+  .main-content .produce {
+    margin-left: 10rem;
+  }
+}
+@media (min-width:610px) {
+  .main-content .produce {
+    margin-left: 10rem;
+  }
+}
+@media (min-width:854px) {
+  .main-content .produce {
+    margin-left: 20rem;
+  }
+}
+@media (min-width:1154px) {
+  .main-content .produce {
+    margin: 0 0 0 65rem;
+  }
+}
+@media (min-width:1128px) {
+  .main-content .produce {
+    margin: 0 0 0 35rem;
+  }
+}
+@media (min-width:1154px) {
+  .main-content .produce {
+    width: 50vh;
+    height: auto;
+  }
+}
+@media (min-width:1682px) {
+  .main-content .produce {
+    margin: 0;
+    margin-left: 65rem;
+    width: 60vh;
+    height: auto;
+  }
+}
+@media (min-width:2560px) {
+  .main-content .produce {
+    margin: 0;
+    margin-left: 70rem;
+    width: 100vh;
+    height: auto;
+  }
+}
+@media (min-width:2482px) {
+  .main-content .produce {
+    margin: 0;
+    margin-left: 70rem;
+    width: 80vh;
+    height: auto;
+  }
+}
+@media (min-width:590px) {
+  .main-content .stand {
+    margin-left: 10rem;
+  }
+}
+@media (min-width:610px) {
+  .main-content .stand {
+    margin-left: 10rem;
+  }
+}
+@media (min-width:854px) {
+  .main-content .stand {
+    margin-left: 20rem;
+  }
+}
+@media (min-width:1154px) {
+  .main-content .stand {
+    margin: 0 0 0 65rem;
+  }
+}
+@media (min-width:1128px) {
+  .main-content .stand {
+    margin: 0 0 0 35rem;
+  }
+}
+@media (min-width:1154px) {
+  .main-content .stand {
+    width: 50vh;
+    height: auto;
+  }
+}
+@media (min-width:1682px) {
+  .main-content .stand {
+    margin: 0;
+    margin-left: 65rem;
+    width: 60vh;
+    height: auto;
+  }
+}
+@media (min-width:2560px) {
+  .main-content .stand {
+    margin: 0;
+    margin-left: 80rem;
+    width: 100vh;
+    height: auto;
+  }
+}
+@media (min-width:2482px) {
+  .main-content .stand {
+    margin: 0;
+    margin-left: 70rem;
+    width: 80vh;
+    height: auto;
+  }
+}
+/***********************************About section body *******************************************/
+.Team {
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width:1353px) {
+  .Team {
+    display: flex;
+    flex-direction: row;
+    margin-left: 4rem;
+  }
+}
+.teammate {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  margin: 0 5rem 5rem 3rem;
+  border-radius: 5%;
+}
+@media (min-width:1722px) {
+  .teammate {
+    margin-right: 22rem;
+  }
+}
+@media (min-width:2131px) {
+  .teammate {
+    margin-right: 43rem;
+  }
+}
+@media (min-width:2540px) {
+  .teammate {
+    margin-left: 13rem;
+  }
+}
+.image {
+  opacity: 1;
+  width: 25vh;
+  height: 25vh;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+  margin: 0 0 5rem 0;
+  border-radius: 15px;
+  margin: 0 35rem 0 0;
+  border: 25px solid;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(to left, black, gray);
+}
+.inside {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+@media (min-width:668px) {
+  .inside {
+    margin-left: 3rem;
+  }
+}
+.teammate:hover .image {
+  opacity: 0.3;
+}
+.teammate:hover .inside {
+  opacity: 1;
+}
+.text {
+  padding: 16px 15px;
+  border-radius: 70px;
+}
+.pro-img1 {
+  margin: 0 0 5rem 0;
+}
+.pro-img2 {
+  margin: 0 0 5rem 0;
+}
+.pro-img3 {
+  margin: 0 0 5rem 0;
+}
+.pro-img4 {
+  margin: 0 0 5rem 0;
+}
+.pro-img5 {
+  margin: 0 0 5rem 0;
+}
+.pro-img6 {
+  margin: 0 0 5rem 0;
+}
+.text a {
+  text-decoration: none;
+  font-size: 20px;
+}
+.fa-github {
+  font-size: 7rem;
+  color: #4078c0;
+}
+@media (min-width:937px) {
+  .fa-github {
+    margin-left: 3rem;
+  }
+}
+@media (min-width:1162px) {
+  .fa-github {
+    margin-left: 8rem;
+  }
+}
+@media (min-width:1319px) {
+  .fa-github {
+    margin-left: 14rem;
+  }
+}
+@media (min-width:2560px) {
+  .fa-github {
+    margin-left: -2rem;
+  }
+}
+@media (min-width:2160px) {
+  .fa-github {
+    margin-left: -2rem;
+  }
+}
+@media (min-width:1377px) {
+  .fa-github {
+    margin-left: -2rem;
+  }
+}
+.text1 {
+  margin: 0 0 10rem 5rem;
+}
+.text2 {
+  margin: 0 0 10rem 5rem;
+}
+.text3 {
+  margin: 0 0 10rem 5rem;
+}
+.text4 {
+  margin: 0 0 10rem 5rem;
+}
+.text5 {
+  margin: 0 0 10rem 5rem;
+}
+.text6 {
+  margin: 0 0 10rem 5rem;
+}
+.info {
+  color: whitesmoke;
+  margin: 0 0 -50rem -60rem;
+  padding: 0 5rem;
+}
+.newinfo {
+  font-size: 2rem;
+  margin: 30rem 20rem 0 0;
+}
+.name {
+  font-size: 2.5rem;
+  margin-left: 4rem;
+  margin-top: -5rem;
+}
+@media (min-width:937px) {
+  .name {
+    margin-left: 10rem;
+  }
+}
+.topname {
+  font-weight: bold;
+}
+@media (min-width:1162px) {
+  .name1 {
+    margin-left: 10rem;
+  }
+}
+@media (min-width:1319px) {
+  .name1 {
+    margin-left: 20rem;
+  }
+}
+@media (min-width:2560px) {
+  .name1 {
+    margin-left: -1rem;
+  }
+}
+@media (min-width:2160px) {
+  .name1 {
+    margin-left: -1rem;
+  }
+}
+@media (min-width:1377px) {
+  .name1 {
+    margin-left: -1rem;
+  }
+}
+@media (min-width:1162px) {
+  .name2 {
+    margin-left: 10rem;
+  }
+}
+@media (min-width:1319px) {
+  .name2 {
+    margin-left: 20rem;
+  }
+}
+@media (min-width:2560px) {
+  .name2 {
+    margin-left: -1rem;
+  }
+}
+@media (min-width:2160px) {
+  .name2 {
+    margin-left: -1rem;
+  }
+}
+@media (min-width:1377px) {
+  .name2 {
+    margin-left: -1rem;
+  }
+}
+@media (min-width:1162px) {
+  .name3 {
+    margin-left: 10rem;
+  }
+}
+@media (min-width:1319px) {
+  .name3 {
+    margin-left: 20rem;
+  }
+}
+@media (min-width:2560px) {
+  .name3 {
+    margin-left: -1rem;
+  }
+}
+@media (min-width:2160px) {
+  .name3 {
+    margin-left: -1rem;
+  }
+}
+@media (min-width:1377px) {
+  .name3 {
+    margin-left: -1rem;
+  }
+}
+@media (min-width:1162px) {
+  .name4 {
+    margin-left: 10rem;
+  }
+}
+@media (min-width:1319px) {
+  .name4 {
+    margin-left: 20rem;
+  }
+}
+@media (min-width:2560px) {
+  .name4 {
+    margin-left: -1rem;
+  }
+}
+@media (min-width:2160px) {
+  .name4 {
+    margin-left: -1rem;
+  }
+}
+@media (min-width:1377px) {
+  .name4 {
+    margin-left: -1rem;
+  }
+}
+.name5 {
+  margin: -2rem 0 0 0;
+  margin-left: 3rem;
+}
+@media (min-width:1319px) {
+  .name5 {
+    margin: 0 15rem;
+    margin-left: 10rem;
+  }
+}
+@media (min-width:900px) {
+  .name5 {
+    margin-left: 13rem;
+  }
+}
+@media (min-width:1348px) {
+  .name5 {
+    margin-left: 30rem;
+  }
+}
+@media (min-width:2560px) {
+  .name5 {
+    margin: 0 0 0 0;
+    margin-left: 3rem;
+  }
+}
+@media (min-width:2160px) {
+  .name5 {
+    margin: 0 0 0 0;
+    margin-left: 3rem;
+  }
+}
+@media (min-width:1377px) {
+  .name5 {
+    margin: 0 0 0 0;
+    margin-left: 3rem;
+  }
+}
+@media (min-width:1162px) {
+  .name6 {
+    margin-left: 10rem;
+  }
+}
+@media (min-width:1319px) {
+  .name6 {
+    margin-left: 20rem;
+  }
+}
+@media (min-width:2560px) {
+  .name6 {
+    margin-left: -1rem;
+  }
+}
+@media (min-width:2160px) {
+  .name6 {
+    margin-left: -1rem;
+  }
+}
+@media (min-width:1154px) {
+  .name6 {
+    margin-left: -1rem;
   }
 }
